classDiagram
    Cliente "1" --> "1..*" Vehiculo
    Cliente "0..*" --> "0..1" Aseguradora
    Cliente "1" --> "0..*" Presupuesto
    Presupuesto "0..*" --> "0..1" Aseguradora
    Presupuesto "1" *-- "0..*" DetalleRepuesto
    DetalleRepuesto "0..*" --> "1" Repuesto
    Turno "0..*" --> "1" Presupuesto
    Turno "0..*" --> "1" Vehiculo
    Turno "1" --> "0..1" Trabajo
    Trabajo "0..*" --> "1" Empleado
    Trabajo "1" --> "1" Factura
    Factura "0..*" --> "0..1" Aseguradora
    Factura "1" *-- "0..1" Pago

    class Cliente {
        -str nombre
        -str telefono
        -bool esAsegurado
        +registrarCliente()
        +modificarDatos()
    }

    class Vehiculo {
        -str patente
        -str marca
        -str modelo
        -str color
        +registrarVehiculo()
    }

    class Aseguradora {
        -str nombre
        -str numeroConvenio
        +validarPoliza()
    }

    class Presupuesto {
        -int numero
        -datetime fechaEmision
        -int duracionEstimadaDias
        -str descripcionArreglos
        -float montoTotal
        +calcularMontoTotal()
        +verificarVigencia()
        +generarPDF()
    }

    class DetalleRepuesto {
        -int cantidad
        -float subtotal
        +calcularSubtotal()
    }

    class Repuesto {
        -str nombre
        -float precioActual
        +actualizarPrecio()
    }

    class Turno {
        -datetime fechaHora
        -str estado
        +solicitarTurno()
        +cancelarTurno()
        +confirmarIngreso()
    }

    class Trabajo {
        -datetime fechaIngreso
        -bool llavesEntregadas
        -bool documentacionEntregada
        -str estadoReparacion
        +iniciarReparacion()
        +actualizarEstado()
        +finalizarTrabajo()
    }

    class Empleado {
        -str nombre
        -str legajo
        +asignarTrabajo()
    }

    class Factura {
        -int numero
        -datetime fechaEmision
        -float montoTotal
        -str tipoCliente
        -bool firmaAsegurado
        +generarFactura()
        +registrarFirmaAsegurado()
    }

    class Pago {
        -datetime fecha
        -float monto
        -str metodoPago
        -str nroCuponPosnet
        +procesarPago()
        +emitirComprobante()
    }